# USU

./: README.md
2014/CS1400/: cs1400.md
2014/CS1400/Assignment_11/: lunarLander.cpp
2014/CS1400/Assignment_12/: life.cpp
2014/CS1400/Assignment_13/: checkoutunit.cpp
2014/CS1400/Assignment_3/: main.cpp
2014/CS1400/Assignment_4/: main (1).cpp
2014/CS1400/Assignment_5/: Source.cpp
2014/CS1400/Assignment_6/: decode.cpp
2014/CS1400/Assignment_7/: dice2.cpp
2014/CS1400/Assignment_9/: mandelbrot.cpp
2015/CS1410/Assignment_1/: Nathan_Tipton_HW1.cpp
2015/CS1410/Assignment_2/: Nathan_Tipton_HW2.cpp
2015/CS1410/Assignment_3/: Nathan_Tipton_HW3.cpp
2016/CS2420/Assign_6_Heaps/: Main.cpp  (+2 more)
2016/ECE3710/: FinalProject.txt
2017/ECE5230/: Homework-2-Space Environment-Tipton-A01207112.xlsm  Homework-6 Propulsion-Tipton-A01207112.xlsm  Homework-8-Power-Tipton-A01207112.xlsm  Homework-8-Satellite Power Lighting Tool-Rev3-Tipton_A01207112.xlsm  Homework-9 Link Budget-Tipton-A01207112.xlsm  homework-4-Orbital Mechanics-Tipton-A01207112.xlsm
2017/ECE6460/: A01207112_HW3_Final.cpp  A01207112_NathanTipton.tar
2018/ECE5780/: .gitignore
2018/ECE5780/lab2/: CMakeLists.txt  EDF.cpp  EDF.hpp  InputParser.cpp  InputParser.hpp  Job.cpp  Job.hpp  Makefile  RM.cpp  RM.hpp  aperiodictest.txt  main.cpp  periodictest.txt
2019/ECE6930/: CA1.m  CA3.m  CA3_1DConv.m  CA3_2.m  HW4.asv  HW4.m  README.md  a.out  audio2bin.m  bin2audio.m  bin2image.m  bin2video.m  convolution2D.c  fir_filter1D.c  image2bin.m  mono2stereo.c  moviePlayer.m  oscope.m  rgb2gray  rgb2gray.c  video2bin.m
(+1227 files in other folders)
